syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message SumRequest {
    int32 first_operand = 1;
    int32 second_operand = 2; 
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 input_number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 prime_number_decomposition_result = 1;
}

message ComputeAverageRequest {
    int32 input_number = 1;
}

message ComputeAverageResponse {
    float average_result = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse) {};

    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
}